--- a/res/layout/drawer_list_item.xml
+++ b/res/layout/drawer_list_item.xml
@@ -10,5 +10,5 @@
     android:paddingRight="16dp"
     android:paddingTop="8dp"
     android:textAppearance="?android:attr/textAppearanceLarge"
-    android:textColor="#fff" />
+    android:textColor="@color/Black" />
 
