--- a/res/layout/game_by_game.xml
+++ b/res/layout/game_by_game.xml
@@ -3,7 +3,6 @@
     android:id="@+id/game_by_game_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cornsilk"
     android:orientation="vertical"
     android:paddingBottom="10dp" >
 
@@ -12,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1"
-        android:background="@color/Orange"
         android:orientation="vertical"
         android:paddingTop="15dp" >
 
@@ -23,11 +21,13 @@
             android:text="@string/empty"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
+        <include layout="@layout/ll_divider" />
+
         <TableRow
             android:id="@+id/sline1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/cornsilk"
+            android:background="@color/gls_blue"
             android:gravity="center_vertical|center_horizontal"
             android:padding="10dp" >
 
@@ -106,7 +106,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:background="@color/cornsilk"
+            android:background="@color/gls_blue"
             android:gravity="center_vertical|center_horizontal"
             android:padding="10dp" >
 
@@ -180,14 +180,14 @@
         </TableRow>
 
     </LinearLayout>
-    
+
     <ProgressBar
-            android:id="@+id/game_progress"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp" />
+        android:id="@+id/game_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp" />
 
     <TableRow
         android:id="@+id/game_by_game_tablerow"
