--- a/res/layout/stats_main.xml
+++ b/res/layout/stats_main.xml
@@ -18,5 +18,5 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="@color/cornsilk"/>
+        android:background="@color/White"/>
 </android.support.v4.widget.DrawerLayout>
