--- a/res/layout/game_edit.xml
+++ b/res/layout/game_edit.xml
@@ -456,18 +456,22 @@
                 android:text="@string/minus1" />
 
             <FrameLayout
+                android:id="@+id/swiper"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
+                android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_weight="1"
-                android:padding="8dp" >
+                android:padding="10dp" >
 
-                <SeekBar
-                    android:id="@+id/game_seek"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:text="@string/swipe_here" />
+
             </FrameLayout>
 
             <Button
