really good place.  still work to do

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -83,5 +83,59 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">5dp</item>
     </style>
+    
+    <style name="table_header_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+        <item name="android:paddingRight">20dp</item>
+    </style>
+    
+    <style name="table_item_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingBottom">3dp</item>
+        
+    </style>
+    
+    <style name="table_label_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:paddingRight">40dp</item>
+    </style>
+    
+    <style name="padded_block">
+        <item name="android:padding">15dp</item>
+    </style>
+    
+    <style name="h1_blue">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:textColor">@color/gls_blue</item>
+        <item name="android:paddingBottom">10dp</item>
+    </style>
+    
+    <style name="big_stat">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:textSize">50sp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+    
+    <style name="big_stat_label">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textColor">@color/Orange</item>
+    </style>
 
 </resources>
