--- a/res/layout/profile_scout.xml
+++ b/res/layout/profile_scout.xml
@@ -1,6 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res/com.gamelifestats.glselevate"
     android:id="@+id/ScoutContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,6 +7,7 @@
 
     <ScrollView
         android:id="@+id/scroll_container"
+        style="@style/padded_block"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1" >
@@ -21,10 +21,9 @@
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/height"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text"
+                 />
 
             <TableRow
                 android:id="@+id/tableRow1"
@@ -54,10 +53,8 @@
 
             <TextView
                 android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/weight"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <TableRow
                 android:id="@+id/tableRow2"
@@ -87,10 +84,8 @@
 
             <TextView
                 android:id="@+id/TextView06"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/vertical_leap"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <TableRow
                 android:id="@+id/TableRow02"
@@ -117,10 +112,8 @@
 
             <TextView
                 android:id="@+id/TextView04"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/wingspan"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <TableRow
                 android:id="@+id/TableRow01"
