--- a/res/layout/profile_skills.xml
+++ b/res/layout/profile_skills.xml
@@ -1,6 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res/com.gamelifestats.glselevate"
     android:id="@+id/ScoutContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,10 +7,10 @@
 
     <ScrollView
         android:id="@+id/scroll_container"
+        style="@style/padded_block"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:padding="15dp" >
+        android:layout_weight="1" >
 
         <LinearLayout
             android:id="@+id/sk_contain"
@@ -21,18 +20,15 @@
 
             <TextView
                 android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/offensive"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+				style="@style/h1_orange" />
+
+            <include layout="@layout/ll_divider" />
 
             <TextView
                 android:id="@+id/TextView09"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/scoring"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingScoring"
@@ -41,12 +37,8 @@
 
             <TextView
                 android:id="@+id/TextView08"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:text="@string/shooting"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingShooting"
@@ -55,12 +47,8 @@
 
             <TextView
                 android:id="@+id/TextView07"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:text="@string/mid_range"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingMidRange"
@@ -69,12 +57,8 @@
 
             <TextView
                 android:id="@+id/TextView06"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:text="@string/long_range"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingLongRange"
@@ -83,12 +67,8 @@
 
             <TextView
                 android:id="@+id/TextView05"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:text="@string/dunk_layup"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingDunksLayups"
@@ -97,12 +77,8 @@
 
             <TextView
                 android:id="@+id/TextView04"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:text="@string/ball_control"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingBallControl"
@@ -111,12 +87,8 @@
 
             <TextView
                 android:id="@+id/TextView03"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:text="@string/ball_handling"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingBallHandle"
@@ -125,12 +97,8 @@
 
             <TextView
                 android:id="@+id/TextView02"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:text="@string/crossover"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingCrossover"
@@ -139,12 +107,8 @@
 
             <TextView
                 android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:text="@string/court_vision"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingCourtVision"
@@ -153,12 +117,8 @@
 
             <TextView
                 android:id="@+id/TextView01"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:text="@string/passing"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingPassing"
@@ -166,13 +126,9 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/TextView01"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:id="@+id/TextView0189"
                 android:text="@string/awareness"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingOffensiveAwareness"
@@ -180,13 +136,9 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/TextView01"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:id="@+id/TextView6501"
                 android:text="@string/fatigue"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingOffensiveFatigue"
@@ -194,20 +146,16 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/textView1453"
                 android:text="@string/defensive"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                style="@style/h1_orange" />
+
+            <include layout="@layout/ll_divider" />
 
             <TextView
-                android:id="@+id/TextView09"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:id="@+id/TextView0879"
                 android:text="@string/man_d"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingMan_d"
@@ -215,13 +163,9 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/TextView09"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:id="@+id/TextView0v9"
                 android:text="@string/team_d"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingTeam_d"
@@ -229,13 +173,9 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/TextView09"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:id="@+id/TextView09fg"
                 android:text="@string/post_d"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingPost_d"
@@ -243,13 +183,9 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/TextView09"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:id="@+id/TextView0sd9"
                 android:text="@string/closeouts"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingCloseouts"
@@ -257,13 +193,9 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/TextView09"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:id="@+id/TextViewfdg09"
                 android:text="@string/recovery"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingRecovery"
@@ -271,13 +203,9 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/TextView09"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:id="@+id/TextView0qe9"
                 android:text="@string/awareness"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/form_header_text" />
 
             <RatingBar
                 android:id="@+id/RatingDefensiveAwareness"
