--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -119,6 +119,9 @@
         <item name="android:textColor">@color/gls_blue</item>
         <item name="android:paddingBottom">10dp</item>
     </style>
+    <style name="h1_orange" parent="h1_blue">
+        <item name="android:textColor">@color/Orange</item>
+    </style>
     
     <style name="big_stat">
         <item name="android:layout_width">wrap_content</item>
@@ -136,6 +139,20 @@
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textColor">@color/Orange</item>
+    </style>
+    
+    <style name="editTextField">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">35sp</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ems">10</item>
+    </style>
+    
+    <style name="form_header_text" parent="stat_button_header">
+        <item name="android:layout_marginBottom">10dp</item>
     </style>
 
 </resources>
