--- a/res/layout/game_edit.xml
+++ b/res/layout/game_edit.xml
@@ -456,35 +456,24 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/lab_meta"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
+                android:id="@+id/lab_minutes"
                 android:text="@string/minutes"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/meta_label" />
 
             <TextView
                 android:id="@+id/dis_minutes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
                 android:text="@string/double_zero"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/meta_text" />
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:text="@string/game_result"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/meta_label"
+                android:text="@string/game_result" />
 
             <TextView
                 android:id="@+id/dis_game_result"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/empty"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                style="@style/meta_text" />
 
         </LinearLayout>
     </HorizontalScrollView>
